storm setup instructions

--- a/index.html
+++ b/index.html
@@ -121,26 +121,26 @@
             <div id="student-websites">
                 <h3>Students</h3>
                 <ul>
-                    <li><a href="http://storm.usc.edu/~/">Jennifer Kaijia Chen</a></li>
-                    <li><a href="http://storm.usc.edu/~/">Danyel Clarice Copeland</a></li>
-                    <li><a href="http://storm.usc.edu/~/">Fatemeh Farahi Bouzanjani</a></li>
-                    <li><a href="http://storm.usc.edu/~/">Sara Anna Frondoni</a></li>
-                    <li><a href="http://storm.usc.edu/~/">Camille Anne Kanengiser</a></li>
-                    <li><a href="http://storm.usc.edu/~/">Deena Khattab</a></li>
-                    <li><a href="http://storm.usc.edu/~/">Elizabeth L. Kim</a></li>
-                    <li><a href="http://storm.usc.edu/~/">Charles Jackson McGrady</a></li>
-                    <li><a href="http://storm.usc.edu/~/">Feibi W. McIntosh</a></li>
-                    <li><a href="http://storm.usc.edu/~/">Bianca Zana Nasser</a></li>
-                    <li><a href="http://storm.usc.edu/~/">Candice Rachel Navi</a></li>
-                    <li><a href="http://storm.usc.edu/~/">Storm Ussing Nylen</a></li>
-                    <li><a href="http://storm.usc.edu/~/">Kieran Reynolds</a></li>
-                    <li><a href="http://storm.usc.edu/~/">Samantha Lynn Sineni</a></li>
-                    <li><a href="http://storm.usc.edu/~/">Jasmine C. Siudzinski </a></li>
-                    <li><a href="http://storm.usc.edu/~/">Allison Tate-Cortese </a></li>
-                    <li><a href="http://storm.usc.edu/~/">Jefferson H. Trieu</a></li>
-                    <li><a href="http://storm.usc.edu/~/">Katharine Mary Weimer</a></li>
-                    <li><a href="http://storm.usc.edu/~/">Natalia Pilar Williams</a></li>
-                    <li><a href="http://storm.usc.edu/~/">Jennie Zhang</a></li>
+                    <li><a href="http://storm.usc.edu/~kaijiach/">Jennifer Kaijia Chen</a></li>
+                    <li><a href="http://storm.usc.edu/~dcopelan/">Danyel Clarice Copeland</a></li>
+                    <!--<li><a href="http://storm.usc.edu/~/">Fatemeh Farahi Bouzanjani</a></li>-->
+                    <li><a href="http://storm.usc.edu/~frondoni/">Sara Anna Frondoni</a></li>
+                    <li><a href="http://storm.usc.edu/~ckanengi/">Camille Anne Kanengiser</a></li>
+                    <li><a href="http://storm.usc.edu/~khattab/">Deena Khattab</a></li>
+                    <li><a href="http://storm.usc.edu/~kimel/">Elizabeth L. Kim</a></li>
+                    <li><a href="http://storm.usc.edu/~cmcgrady/">Charles Jackson McGrady</a></li>
+                    <li><a href="http://storm.usc.edu/~fmcintos/">Feibi W. McIntosh</a></li>
+                    <li><a href="http://storm.usc.edu/~bznasser/">Bianca Zana Nasser</a></li>
+                    <li><a href="http://storm.usc.edu/~cnavi/">Candice Rachel Navi</a></li>
+                    <li><a href="http://storm.usc.edu/~nylen/">Storm Ussing Nylen</a></li>
+                    <li><a href="http://storm.usc.edu/~kieranr/">Kieran Reynolds</a></li><!--kieranr ?-->
+                    <li><a href="http://storm.usc.edu/~sineni/">Samantha Lynn Sineni</a></li>
+                    <li><a href="http://storm.usc.edu/~siudzins/">Jasmine C. Siudzinski </a></li>
+                    <li><a href="http://storm.usc.edu/~tatecort/">Allison Tate-Cortese </a></li>
+                    <li><a href="http://storm.usc.edu/~jtrieu/">Jefferson H. Trieu</a></li><!--NO STORM YET ?-->
+                    <li><a href="http://storm.usc.edu/~kmweimer/">Katharine Mary Weimer</a></li>
+                    <li><a href="http://storm.usc.edu/~nataliaw/">Natalia Pilar Williams</a></li>
+                    <li><a href="http://storm.usc.edu/~jenniezh/">Jennie Zhang</a></li>
                     
                 </ul>
             </div>
