storm setup instructions

--- a/storm-setup.html
+++ b/storm-setup.html
@@ -26,7 +26,11 @@
 		color:hotpink;
 	}
 	img{
+		margin:16px 0;
 		box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.2);
+	}
+	p{
+		margin-top:40px;
 	}
 	#wrapper{
 		width:680px;
@@ -57,62 +61,50 @@
 		<div id="write-up">
 			<p>
 				In order to have a storm account, you need to have registered as a user in the <a href="http://map.usc.edu/map-portal/">USC MAP Portal</a>. Once you've done this, a storm account will be created for you and you will be able to access your remote server to start building your IML 400 website.
-			</p>
-			<p>
+			<br /><br />
 				You should also download your copy of <a href="http://www.sublimetext.com/">Sublime Text</a>, and have it available to you in your <strong>Dock</strong>.
-			</p>
-
-			<p>
+			<br /><br />
 				These instructions assume you're using a mac. For windows or linux talk to your instructor.
 			</p>
 
 			<p>
 				<strong>1.</strong> Open the <strong>Go</strong> menu in the Finder top bar and select <strong>Connect to Server</strong>.
-			</p>
-			<p>
+			
 				<img src="img/storm-setup-1.jpg" />
 			</p>
 			<p>
 				<strong>2.</strong>  A prompt will appear requesting server information. On <strong>Server Address</strong> you write <strong>storm.usc.edu</strong> and click <strong>Connect</strong>.
-			</p>
-			<p>
+		
 				<img src="img/storm-setup-2.jpg" />
 			</p>
 			<p>
 				<strong>3.</strong> The connection process will start, and another prompt will ask you for credentials. This is when you will enter your <strong>USC MAP Portal username and password</strong>.
-			</p>
-			<p>
+			
 				<img src="img/storm-setup-3.jpg" />
 			</p>
 			<p>
 				<strong>4.</strong> The next step will ask you for a volume to mount. This is the cool part where you will access yor portion of the Storm server as another hard drive in your computer. Choose the volume with your username in it.
-			</p>
-			<p>
+		
 				<img src="img/storm-setup-4.jpg" />
 			</p>
 			<p>
 				<strong>5.</strong> Navigate in your Finder to the Sites directory inside your recently mounted Storm drive. The <strong>Sites</strong> directory is going to be the Root directory for your class website. Everything you put in there will be available online at the following URL: <strong>http://storm.usc.edu/~yourusername/</strong>. For IML 400, you can ignore all the directories next to <strong>Sites</strong>.
-			</p>
-			<p>
+			
 				<img src="img/storm-setup-5.jpg" />
 			</p>
 			<p>
 				<strong>6.</strong> Grab your <strong>Sites</strong> directory and drag it into your <strong>Sublime Text</strong> icon in the Dock. By doing this, you will have your whole class website accesible to you from the Sublime Text user interface, and you will be ready to start coding.
-			</p>
-			<p>
+		
 				<img src="img/storm-setup-6.jpg" />
-			</p>
-			<p>
+			
 				In <strong>Sublime Text</strong> you should be able to explore your <strong>Sites</strong> directory.
-			</p>
-			<p>
+		
 				<img src="img/storm-setup-7.jpg" />
 			</p>
 
 			<p>
 				<strong>7.</strong> From within <strong>Sublime Text</strong>, select your <strong>index.html</strong> file and inspect it. Change it. Compare it with the rendered version in <strong>http://storm.usc.edu/~yourusername/index.html</strong>. <a href="http://storm.usc.edu/~Black/index.html">Here is mine</a>. 
-			</p>
-			<p>
+			
 				<img src="img/storm-setup-8.jpg" />
 			</p>
 
