assignment 4 and navigation templates

--- a/assignment-2-1.html
+++ b/assignment-2-1.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<meta charset="utf-8" />
 <!--	INTRO
 Hi there. What you're reading here is a HTML comment. Comments are strings in the code that the computer won't execute. Comments are used to send messages about the code to other humans. They usually explain tricky parts of the code or give some context to the decisions a developer has made through the code.
 
