--- a/assignment-2-2.html
+++ b/assignment-2-2.html
@@ -1,5 +1,7 @@
-<html>
+
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
 	<title>imgs and hovers</title>
 	<style>
 	body{
@@ -106,22 +108,21 @@
 				The CSS properties I choose for this example are: <strong>background, width, height, float, margin</strong>.
 			</p>
 		</div>
+
 		<h3>Example</h3>
 		<div id="example" style="overflow:auto;";>
 			<!-- EXAMPLE BEGINS -->
 			<p>
 				Move your cursor over the images and see what happens. Then try to drag the images into your desktop. <strong>What's the difference? Why are they different?</strong>
 			</p>
-			<div>
-			</div>
+			<div></div>
 			<div>
 				<a href="http://www.flickr.com/photos/blackaller/8288709249/in/set-72157632291003730" target="blank">
 					<img src="http://farm9.staticflickr.com/8076/8288709249_03251aa5a8_n.jpg" width="300px" height="300px" />
 				</a>
 			</div>
-			
-			<!-- EXAMPLE ENDS -->
-		</div>
+		</div><!-- EXAMPLE ENDS -->
+
 		<h3>Descriptions</h3>
 		<div id="descriptions">
 			<ul><h4>HTML</h4>
