--- a/assignment-2.html
+++ b/assignment-2.html
@@ -1,4 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
 	<title>IML 400 Spring 2014 Assignment 2</title>
     <style>
         body{
@@ -82,3 +85,4 @@
         </div>
     </div>
 </body>
+</html>
