--- a/storm-setup.html
+++ b/storm-setup.html
@@ -1,5 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
+
 	<title>Storm Setup Instructions</title>
 	<style>
 	body{
@@ -53,7 +56,7 @@
 <body>
 	<div id="wrapper">
 		<div id="header">
-			<h3>IML 400 Spring 2014</h3>
+			<h3><a href="index.html">IML 400 Spring 2014</a></h3>
 			<h3><strong>Storm Setup Instructions for Mac</strong></h3>
 			<h3></h3>
 		</div>
@@ -64,7 +67,7 @@
 			<br /><br />
 				You should also download your copy of <a href="http://www.sublimetext.com/">Sublime Text</a>, and have it available to you in your <strong>Dock</strong>.
 			<br /><br />
-				These instructions assume you're using a mac. For windows or linux talk to your instructor.
+				These instructions assume you're using a mac. For windows or linux talk to your instructor. If you prefer to use FTP on Mac or Windows <a href="http://storm.usc.edu/~Black/IML-400/connecting-to-storm.pdf">please read this file</a>.
 			</p>
 
 			<p>
