--- a/assignment-1.html
+++ b/assignment-1.html
@@ -1,4 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
 	<title>IML 400 Spring 2014 Assignment 1</title>
     <style>
         body{
@@ -89,3 +92,4 @@
         </div>
     </div>
 </body>
+</html>
