--- a/reading-report-template.html
+++ b/reading-report-template.html
@@ -1,5 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
+
 	<title>Reading Report No.</title>
 	<style>
 	body{
