minor change to index

--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
                 <h3>Resources</h3>
                 <ul>
                     <li>
+                        <a href="links.html" target="blank">Useful Links</a>
+                    </li>
+                    <li>
                         <a href="http://storm.usc.edu/~Black/IML-400/storm-setup.html">Setting up Storm</a>
                     </li>
                     <li>
@@ -269,9 +272,6 @@
                     </li>
                     <li>
                         <a href="http://leafletjs.com" target="blank">Leaflet JS</a>
-                    </li>
-                    <li>
-                        <a href="links.html" target="blank">Other useful links</a>
                     </li>
                 </ul>
             </div>
