minor change to index and links

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <h3>Resources</h3>
                 <ul>
                     <li>
-                        <a href="links.html" target="blank">Useful Links</a>
+                        [Very] <a href="links.html" target="blank">Useful Links</a>
                     </li>
                     <li>
                         <a href="http://storm.usc.edu/~Black/IML-400/storm-setup.html">Setting up Storm</a>
@@ -204,10 +204,6 @@
                     
                     <li>
                      <a href="http://jsfiddle.net/" target="blank">JSFiddle</a>
-                    </li>
-                    
-                    <li>
-                        <a href="http://javascriptissexy.com/" target="blank">Javascript.is(Sexy)</a>
                     </li>
                     <li>
                         <a href="http://sass-lang.com" target="blank">SASS CSS Preprocessor</a>
