--- a/links.html
+++ b/links.html
@@ -88,6 +88,9 @@
             <h3>Javascript</h3>
             <ul>
                 <li>
+                        <a href="http://javascriptissexy.com/" target="blank">Javascript.is(Sexy)</a>
+                </li>
+                <li>
                      <a href="http://www.malsup.com/jquery/cycle/" target="blank">jQuery Cycle Plugin</a> slideshow plugin that supports many different types of transition effects
                 </li>
                 <li>
