fixed a bunch of <head> tags all over the place

--- a/fall-2012/api-examples.html
+++ b/fall-2012/api-examples.html
@@ -1,4 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
 	<title>IML 400 Fall 2012 Intro to APIs</title>
     <style>
         body{
@@ -48,7 +51,7 @@
         </div>
     </div>
 </body>
-
+</html>
 
 
 
