--- a/fall-2012/assignment-1.html
+++ b/fall-2012/assignment-1.html
@@ -1,4 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
 	<title>IML 400 Fall 2012 Assignment 1</title>
     <style>
         body{
@@ -65,3 +68,4 @@
         </div>
     </div>
 </body>
+</html>
