--- a/fall-2012/students.html
+++ b/fall-2012/students.html
@@ -1,28 +1,30 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
     <title>IML400 Fall 2012 Students</title>
-<style>
-body{
-    font-family:"Courier New", Courier, monospace;
-    background:#222;
-    color:#eee;
-}
-#student-websites a{
-    font-weight:bold;
-    text-decoration:none;
-    color:crimson;
-}
-#student-websites a:hover{
-    color:gold;
-}
-#student-websites ul{
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-#student-websites ul li{
-    padding:0 0 0 20px;
-}
+    <style>
+    body{
+        font-family:"Courier New", Courier, monospace;
+        background:#222;
+        color:#eee;
+    }
+    #student-websites a{
+        font-weight:bold;
+        text-decoration:none;
+        color:crimson;
+    }
+    #student-websites a:hover{
+        color:gold;
+    }
+    #student-websites ul{
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+    }
+    #student-websites ul li{
+        padding:0 0 0 20px;
+    }
 </style>
 </head>
 <body>
