--- a/spring-2013/assignment-1/index.html
+++ b/spring-2013/assignment-1/index.html
@@ -1,4 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
 	<title>IML 400 Spring 2013 Assignment 1</title>
     <style>
         body{
@@ -39,3 +42,4 @@
         <li>Team 5: <a href="#" onClick="alert('we are still waiting :(');">The web in 2013</a></li>
     </p>
 </body>
+</html>
