--- a/spring-2013/assignment-5.html
+++ b/spring-2013/assignment-5.html
@@ -1,4 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
 	<title>IML 400 Spring 2013 Assignment 5</title>
     <style>
         body{
@@ -110,3 +113,4 @@
         </div>
     </div>
 </body>
+</html>
