--- a/spring-2013/assignment-demo.html
+++ b/spring-2013/assignment-demo.html
@@ -1,29 +1,33 @@
-<style>
-body{
-	margin:0;
-	background:#111;
-}
-.hi{
-	font-family: arial;
-	font-size: 40px;
-	background: #222;
-	width:950px;
-	font-weight: bold;
-	margin:auto;
-	text-align:center;
-}
-#one{
-	color:crimson;
-}
-#two{
-	color:gold;
-}
-</style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+	<style>
+	body{
+		margin:0;
+		background:#111;
+	}
+	.hi{
+		font-family: arial;
+		font-size: 40px;
+		background: #222;
+		width:950px;
+		font-weight: bold;
+		margin:auto;
+		text-align:center;
+	}
+	#one{
+		color:crimson;
+	}
+	#two{
+		color:gold;
+	}
+	</style>
+</head>
 <body>
 	<div id="one" class="hi">
 		hi IML400
 	</div>
-
 	<div id="two" class="hi">
 		<li>Team 1: The web in 1994</li>
 		<li>Team 2: The web in 1998</li>
@@ -33,3 +37,4 @@ body{
 		<img src="img/evil-boy.jpeg" />
 	</div>
 </body>
+</html>
