--- a/spring-2013/aswenson-12/mix.html
+++ b/spring-2013/aswenson-12/mix.html
@@ -1,6 +1,7 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
 	<title>Playground</title>
     <script type="text/javascript" src="jquery.js"></script>  	
     <script type="text/javascript" src="raphael-min.js"></script>  
