--- a/spring-2013/layout-4.html
+++ b/spring-2013/layout-4.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> <!-- Tells the browser that the page is created with the HTML5 standard. It will be broken in IE -->
 <html lang="en">
-	<head>
+<head>
+    <meta charset="utf-8" />
 		<!-- Introducing the meta tag -->
 		<meta name="author" content="Luis Blackaller">
 		<meta name="designer" content="Luis Blackaller">
