--- a/spring-2013/mimsy-by-padgett.html
+++ b/spring-2013/mimsy-by-padgett.html
@@ -1,34 +1,40 @@
-<style>
-body{
-	margin:0;
-	font-size:1em;
-	background:#121212;
-	color:black;
-	font-family:courier, monospace;
-	letter-spacing:1;
-}
-h3, h4{
-	color:black;
-	text-shadow:0px 1px 0px rgba(255,255,255,0.15);
-}
-h4{
-	font-weight:normal;
-}
-p{
-	margin:0;
-	padding:0 0 10px 0;
-	text-indent:20px;
-}
-#wrapper{
-	width:720px;
-	margin:0px auto;
-	background:#676767;
-	padding:100px 60px;
-	box-shadow:0px 0px 400px 0px rgba(0,0,0,0.6);
-	text-shadow:0px 1px 0px rgba(255,255,255,0.1);
-	
-}
-</style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+  <style>
+  body{
+  	margin:0;
+  	font-size:1em;
+  	background:#121212;
+  	color:black;
+  	font-family:courier, monospace;
+  	letter-spacing:1;
+  }
+  h3, h4{
+  	color:black;
+  	text-shadow:0px 1px 0px rgba(255,255,255,0.15);
+  }
+  h4{
+  	font-weight:normal;
+  }
+  p{
+  	margin:0;
+  	padding:0 0 10px 0;
+  	text-indent:20px;
+  }
+  #wrapper{
+  	width:720px;
+  	margin:0px auto;
+  	background:#676767;
+  	padding:60px 60px;
+  	box-shadow:0px 0px 400px 0px rgba(0,0,0,0.6);
+  	text-shadow:0px 1px 0px rgba(255,255,255,0.1);
+  	
+  }
+  </style>
+</head>
+<body>
 <div id="wrapper">
 <h3 class='post-title entry-title' itemprop='name'>
 MIMSY WERE THE BOROGOVES<br /> by Lewis Padgett, published 1943
@@ -1540,3 +1546,5 @@ MIMSY WERE THE BOROGOVES<br /> Lewis Padgett (aka Henry Kuttner and Catherine L.
   Sunlight slanted through the open windows, brightening the golden pelt of Mr. Bear. Downstairs the ringing of the telephone began again.
 </p>
 </div>
+</body>
+</html>
