--- a/fall-2012/assignment-4.html
+++ b/fall-2012/assignment-4.html
@@ -1,4 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
 	<title>IML 400 Fall 2012 Assignment 4</title>
     <style>
         body{
@@ -81,3 +84,4 @@
         </div>
     </div>
 </body>
+</html>
