--- a/fall-2012/assignment-9.html
+++ b/fall-2012/assignment-9.html
@@ -1,4 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
 	<title>IML 400 Fall 2012 Assignment 9</title>
     <style>
         body{
@@ -89,3 +92,4 @@
         </div>
     </div>
 </body>
+</html>
