--- a/fall-2012/css-transitions.html
+++ b/fall-2012/css-transitions.html
@@ -1,38 +1,40 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
 
-<style>
-body{
-	font-family:arial;
-	font-size:60px;
-	font-weight:bold;
-	margin:0;
-	background:#111;
-}
-#wrapper{
-	width:900px;
-	margin:80px auto;
-	-webkit-perspective: 1000;
-}
-.door{
-	color:#111;
-	padding:50px;
-	float:left;
-	width:200px;
-	height:200px;
-	background:gold;
-	-webkit-transform: rotateY(0deg) rotateX(0deg);
-	-webkit-transition: all 1s ease-out;
+	<style>
+	body{
+		font-family:arial;
+		font-size:60px;
+		font-weight:bold;
+		margin:0;
+		background:#111;
+	}
+	#wrapper{
+		width:900px;
+		margin:80px auto;
+		-webkit-perspective: 1000;
+	}
+	.door{
+		color:#111;
+		padding:50px;
+		float:left;
+		width:200px;
+		height:200px;
+		background:gold;
+		-webkit-transform: rotateY(0deg) rotateX(0deg);
+		-webkit-transition: all 1s ease-out;
 
-}
-.door:hover{
-	background:crimson;
-	height:400px;
-	-webkit-transform: rotateY(45deg) rotateX(45deg);
-	
+	}
+	.door:hover{
+		background:crimson;
+		height:400px;
+		-webkit-transform: rotateY(45deg) rotateX(45deg);
+		
 
-}
-</style>
+	}
+	</style>
 </head>
 <body>
 	<div id="wrapper">
