--- a/fall-2012/experiments.html
+++ b/fall-2012/experiments.html
@@ -1,7 +1,15 @@
-<h3>A few simple experiments using JQuery Plugins</h3>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+ </head>
+ <body>
+	<h3>A few simple experiments using JQuery Plugins</h3>
 
-<ul>
-	<li><a href="video-bg">Video Background</a></li>
-	<li><a href="map-bg">Google Maps Scrolling Background</a></li>
-	<li><a href="supersized/slideshow/mytest.html">Photo Slideshow</a></li>
-</ul>
+	<ul>
+		<li><a href="video-bg">Video Background</a></li>
+		<li><a href="map-bg">Google Maps Scrolling Background</a></li>
+		<li><a href="supersized/slideshow/mytest.html">Photo Slideshow</a></li>
+	</ul>
+</body>
+</html>
