--- a/fall-2012/map-bg/index.html
+++ b/fall-2012/map-bg/index.html
@@ -1,64 +1,67 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
 
-<style>
-body{
-	color: #eee;
-	font-family: Verdana, Geneva, sans-serif;
-	margin:0;
-}
-html, body {
-	height:100%;
-}
-h1{
-	font-size:60px;
-	padding:0;
-	margin:0;
-}
-h2{
-	padding:0;
-	margin:0;
-}
-a{
-	text-decoration:none;
-	color:#eee;
-}
-a:hover{
-	color:#fff;
-}
-#cabeza{
-	text-align: center;
-	text-shadow: 0 00 0.5em rgba(255,255,255,0.8);
-	background:rgba(0,0,0,0.2);
-	box-shadow: 0 00 0.5em rgba(0,0,0,0.2);
-}
-#map {
-	position:absolute;
-	width:100%;
-	min-height:100%;
-	background:#dffee7;
-}
-#wrapper{
-	min-height:100%;
-	height:auto !important;
-	z-index:1000;
+	<style>
+	body{
+		color: #eee;
+		font-family: Verdana, Geneva, sans-serif;
+		margin:0;
+	}
+	html, body {
+		height:100%;
+	}
+	h1{
+		font-size:60px;
+		padding:0;
+		margin:0;
+	}
+	h2{
+		padding:0;
+		margin:0;
+	}
+	a{
+		text-decoration:none;
+		color:#eee;
+	}
+	a:hover{
+		color:#fff;
+	}
+	#cabeza{
+		text-align: center;
+		text-shadow: 0 00 0.5em rgba(255,255,255,0.8);
+		background:rgba(0,0,0,0.2);
+		box-shadow: 0 00 0.5em rgba(0,0,0,0.2);
+	}
+	#map {
+		position:absolute;
+		width:100%;
+		min-height:100%;
+		background:#dffee7;
+	}
+	#wrapper{
+		min-height:100%;
+		height:auto !important;
+		z-index:1000;
 
 
-	position:relative;
-	margin:auto;
-	padding:80px 0;
-	width:800px;
+		position:relative;
+		margin:auto;
+		padding:80px 0;
+		width:800px;
 
-}
-</style>
+	}
+	</style>
 
-<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyBHCXWNRpOoGg7VR_w_Hl3TaTl8IVIcsJ0" type="text/javascript"></script>
+	<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyBHCXWNRpOoGg7VR_w_Hl3TaTl8IVIcsJ0" type="text/javascript"></script>
 
-<script src="js/jquery-1.8.2.min.js" type="text/javascript" charset="utf-8"></script>
+	<!--<script src="js/jquery-1.8.2.min.js" type="text/javascript" charset="utf-8"></script>-->
+	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 
-<script src="js/mapita.js" type="text/javascript"></script>
+	<script src="js/mapita.js" type="text/javascript"></script>
 
-<script src="js/jquery.lazyload.mini.js" type="text/javascript"></script>
+	<script src="js/jquery.lazyload.mini.js" type="text/javascript"></script>
 
 
 
