--- a/spring-2013/arrays.html
+++ b/spring-2013/arrays.html
@@ -1,5 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
     <style>
