--- a/spring-2013/css-position-test.html
+++ b/spring-2013/css-position-test.html
@@ -1,48 +1,52 @@
-<style>
-body{
-	margin:0;
-	background:#222;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+	<style>
+	body{
+		margin:0;
+		background:#222;
+	}
 
-.header{
-	position:fixed;
-	top:0;
-	width: 100%;
-	height: 200px;
-	background: yellow;
-}
+	.header{
+		position:fixed;
+		top:0;
+		width: 100%;
+		height: 200px;
+		background: yellow;
+	}
 
 
-.wrapper{
-	position:relative;
-	margin:200px auto;
-	width: 800px;
-	height: 640px;
-}
+	.wrapper{
+		position:relative;
+		margin:200px auto;
+		width: 800px;
+		height: 640px;
+	}
 
-.small-square{
-	float:left;
-	margin:20px;
-	width: 120px;
-	height: 120px;
-}
+	.small-square{
+		float:left;
+		margin:20px;
+		width: 120px;
+		height: 120px;
+	}
 
-.blue{
+	.blue{
 
-	background:dodgerblue;
-}
+		background:dodgerblue;
+	}
 
-.yellow{
-	background:yellow;
+	.yellow{
+		background:yellow;
 
-}
-.pink{
-	background:deeppink;
+	}
+	.pink{
+		background:deeppink;
 
-}
+	}
 
-</style>
-
+	</style>
+</head>
 <body>
 	<div class="header">
 	</div>
@@ -110,6 +114,5 @@ body{
 		</div>
 
 	</div>
-
-
 </body>
+</head>
