--- a/spring-2013/hexagons/index.html
+++ b/spring-2013/hexagons/index.html
@@ -6,6 +6,7 @@
 <!--[if IE 9]><html class="lt-ie10 no-js" lang="en"><![endif]-->
 <!--[if gt IE 9]><!--><html lang="en"><!--<![endif]-->
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>HEXAGONS</title>
 	<!--
 	TAKEN FROM: http://builtbybuffalo.com/work
