--- a/spring-2013/index.html
+++ b/spring-2013/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
     <title>IML 400 Spring 2013</title>
 
     <script>
