--- a/spring-2013/links.html
+++ b/spring-2013/links.html
@@ -1,6 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<style>
+    <meta charset="utf-8" />
+    <style>
         body{
             margin:0;
             color: #eee;
