--- a/spring-2013/transit/index.html
+++ b/spring-2013/transit/index.html
@@ -1,5 +1,7 @@
-</html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
 	<script src="js/jquery-1.9.1.js"></script>
 	<script src="js/jquery.transit.js"></script>
 
