--- a/spring-2013/twitter/index.html
+++ b/spring-2013/twitter/index.html
@@ -1,4 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
 
 	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="js/jquery.jtwt.js"></script>
@@ -22,3 +25,4 @@
 	<div id="tweets"></div>
 
 </body>
+</html>
