--- a/fall-2012/map-bg/index.html
+++ b/fall-2012/map-bg/index.html
@@ -53,8 +53,13 @@
 
 	}
 	</style>
-
+	<!-- OLD API CALL BWOKWEN
 	<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyBHCXWNRpOoGg7VR_w_Hl3TaTl8IVIcsJ0" type="text/javascript"></script>
+	-->
+
+	<script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBHCXWNRpOoGg7VR_w_Hl3TaTl8IVIcsJ0&sensor=true">
+    </script>
 
 	<!--<script src="js/jquery-1.8.2.min.js" type="text/javascript" charset="utf-8"></script>-->
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
