--- a/fall-2012/map-bg/api-test-1.html
+++ b/fall-2012/map-bg/api-test-1.html
@@ -13,8 +13,13 @@
     <script type="text/javascript">
       function initialize() {
         var mapOptions = {
-          center: new google.maps.LatLng(-34.397, 150.644),
-          zoom: 8
+          center: new google.maps.LatLng(33.998752, -118.472362), // Wemolab 
+          //center: new google.maps.LatLng(34.023991, -118.287474), // USC MAP
+          zoom: 20,
+          //https://developers.google.com/maps/documentation/javascript/maptypes
+          mapTypeId: google.maps.MapTypeId.SATELLITE //options MapTypeId.TERRAIN MapTypeId.HYBRID MapTypeId.ROADMAP
+          //mapTypeId: google.maps.MapTypeId.TERRAIN
+          //mapTypeId: google.maps.MapTypeId.ROADMAP
         };
         var map = new google.maps.Map(document.getElementById("map-canvas"),
             mapOptions);
