--- a/fall-2012/map-bg/index.html
+++ b/fall-2012/map-bg/index.html
@@ -5,7 +5,7 @@
 
 	<style>
 	body{
-		color: #eee;
+		color: #fff;
 		font-family: Verdana, Geneva, sans-serif;
 		margin:0;
 	}
@@ -13,26 +13,29 @@
 		height:100%;
 	}
 	h1{
-		font-size:60px;
+		font-size:190px;
 		padding:0;
 		margin:0;
 	}
 	h2{
 		padding:0;
 		margin:0;
+		font-size:90px;
 	}
 	a{
 		text-decoration:none;
-		color:#eee;
+		color:#fff;
 	}
 	a:hover{
-		color:#fff;
+		color:lime;
 	}
 	#cabeza{
 		text-align: center;
+		/*
 		text-shadow: 0 00 0.5em rgba(255,255,255,0.8);
 		background:rgba(0,0,0,0.2);
 		box-shadow: 0 00 0.5em rgba(0,0,0,0.2);
+		*/
 	}
 	#map {
 		position:absolute;
@@ -44,12 +47,12 @@
 		min-height:100%;
 		height:auto !important;
 		z-index:1000;
-
+		background:rgba(0,0,0,0.3);
 
 		position:relative;
 		margin:auto;
 		padding:80px 0;
-		width:800px;
+		width:100%;
 
 	}
 	</style>
