map progress and assignment 5 draft

--- a/fall-2012/map-bg/coordinate-finder.html
+++ b/fall-2012/map-bg/coordinate-finder.html
@@ -7,98 +7,104 @@
     <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyB4lFfLe6M8ZfLtBZuxO82402e1ATUu5iM"
       type="text/javascript"></script>
     <script type="text/javascript">
+    function load() {
+        if (GBrowserIsCompatible()) {
+            var map = new GMap2(document.getElementById("map"));
+            map.addControl(new GSmallMapControl());
+            map.addControl(new GMapTypeControl());
+            var center = new GLatLng(33.998752, -118.472362);
+            map.setCenter(center, 15);
+            geocoder = new GClientGeocoder();
+            var marker = new GMarker(center, {
+                draggable: true
+            });
+            map.addOverlay(marker);
+            document.getElementById("lat").innerHTML = center.lat().toFixed(5);
+            document.getElementById("lng").innerHTML = center.lng().toFixed(5);
 
- function load() {
-      if (GBrowserIsCompatible()) {
+            GEvent.addListener(marker, "dragend", function () {
+                var point = marker.getPoint();
+                map.panTo(point);
+                document.getElementById("lat").innerHTML = point.lat().toFixed(5);
+                document.getElementById("lng").innerHTML = point.lng().toFixed(5);
+
+            });
+
+
+            GEvent.addListener(map, "moveend", function () {
+                map.clearOverlays();
+                var center = map.getCenter();
+                var marker = new GMarker(center, {
+                    draggable: true
+                });
+                map.addOverlay(marker);
+                document.getElementById("lat").innerHTML = center.lat().toFixed(5);
+                document.getElementById("lng").innerHTML = center.lng().toFixed(5);
+
+
+                GEvent.addListener(marker, "dragend", function () {
+                    var point = marker.getPoint();
+                    map.panTo(point);
+                    document.getElementById("lat").innerHTML = point.lat().toFixed(5);
+                    document.getElementById("lng").innerHTML = point.lng().toFixed(5);
+
+                });
+
+            });
+
+        }
+    }
+
+    function showAddress(address) {
         var map = new GMap2(document.getElementById("map"));
         map.addControl(new GSmallMapControl());
         map.addControl(new GMapTypeControl());
-        var center = new GLatLng(33.998752, -118.472362);
-        map.setCenter(center, 15);
-        geocoder = new GClientGeocoder();
-        var marker = new GMarker(center, {draggable: true});  
-        map.addOverlay(marker);
-        document.getElementById("lat").innerHTML = center.lat().toFixed(5);
-        document.getElementById("lng").innerHTML = center.lng().toFixed(5);
+        if (geocoder) {
+            geocoder.getLatLng(
+                address,
+                function (point) {
+                    if (!point) {
+                        alert(address + " not found");
+                    } else {
+                        document.getElementById("lat").innerHTML = point.lat().toFixed(5);
+                        document.getElementById("lng").innerHTML = point.lng().toFixed(5);
+                        map.clearOverlays();
+                        map.setCenter(point, 14);
+                        var marker = new GMarker(point, {
+                            draggable: true
+                        });
+                        map.addOverlay(marker);
 
-    GEvent.addListener(marker, "dragend", function() {
-       var point = marker.getPoint();
-        map.panTo(point);
-       document.getElementById("lat").innerHTML = point.lat().toFixed(5);
-       document.getElementById("lng").innerHTML = point.lng().toFixed(5);
+                        GEvent.addListener(marker, "dragend", function () {
+                            var pt = marker.getPoint();
+                            map.panTo(pt);
+                            document.getElementById("lat").innerHTML = pt.lat().toFixed(5);
+                            document.getElementById("lng").innerHTML = pt.lng().toFixed(5);
+                        });
 
-        });
+                        GEvent.addListener(map, "moveend", function () {
+                            map.clearOverlays();
+                            var center = map.getCenter();
+                            var marker = new GMarker(center, {
+                                draggable: true
+                            });
+                            map.addOverlay(marker);
+                            document.getElementById("lat").innerHTML = center.lat().toFixed(5);
+                            document.getElementById("lng").innerHTML = center.lng().toFixed(5);
 
+                            GEvent.addListener(marker, "dragend", function () {
+                                var pt = marker.getPoint();
+                                map.panTo(pt);
+                                document.getElementById("lat").innerHTML = pt.lat().toFixed(5);
+                                document.getElementById("lng").innerHTML = pt.lng().toFixed(5);
+                            });
 
-   GEvent.addListener(map, "moveend", function() {
-      map.clearOverlays();
-    var center = map.getCenter();
-      var marker = new GMarker(center, {draggable: true});
-      map.addOverlay(marker);
-      document.getElementById("lat").innerHTML = center.lat().toFixed(5);
-     document.getElementById("lng").innerHTML = center.lng().toFixed(5);
+                        });
 
-
-   GEvent.addListener(marker, "dragend", function() {
-      var point =marker.getPoint();
-       map.panTo(point);
-      document.getElementById("lat").innerHTML = point.lat().toFixed(5);
-       document.getElementById("lng").innerHTML = point.lng().toFixed(5);
-
-        });
- 
-        });
-
-      }
-    }
-
-     function showAddress(address) {
-     var map = new GMap2(document.getElementById("map"));
-       map.addControl(new GSmallMapControl());
-       map.addControl(new GMapTypeControl());
-       if (geocoder) {
-        geocoder.getLatLng(
-          address,
-          function(point) {
-            if (!point) {
-              alert(address + " not found");
-            } else {
-      document.getElementById("lat").innerHTML = point.lat().toFixed(5);
-     document.getElementById("lng").innerHTML = point.lng().toFixed(5);
-     map.clearOverlays()
-      map.setCenter(point, 14);
-   var marker = new GMarker(point, {draggable: true});  
-     map.addOverlay(marker);
-
-    GEvent.addListener(marker, "dragend", function() {
-      var pt = marker.getPoint();
-       map.panTo(pt);
-      document.getElementById("lat").innerHTML = pt.lat().toFixed(5);
-       document.getElementById("lng").innerHTML = pt.lng().toFixed(5);
-        });
-
-
-   GEvent.addListener(map, "moveend", function() {
-      map.clearOverlays();
-    var center = map.getCenter();
-      var marker = new GMarker(center, {draggable: true});
-      map.addOverlay(marker);
-      document.getElementById("lat").innerHTML = center.lat().toFixed(5);
-     document.getElementById("lng").innerHTML = center.lng().toFixed(5);
-
-   GEvent.addListener(marker, "dragend", function() {
-     var pt = marker.getPoint();
-      map.panTo(pt);
-    document.getElementById("lat").innerHTML = pt.lat().toFixed(5);
-     document.getElementById("lng").innerHTML = pt.lng().toFixed(5);
-        });
- 
-        });
-
-            }
-          }
-        );
-      }
+                    }
+                }
+            );
+        }
     }
     </script>
 
