--- a/links.html
+++ b/links.html
@@ -105,6 +105,27 @@
                 <li>
                      <a href="http://24ways.org/2013/grunt-is-not-weird-and-hard/" target="blank">grunt is not weird and hard</a> Introducing the <a href="http://gruntjs.com">grunt task runner</a>
                 </li>
+                <li>
+                     <a href="http://requirejs.org/" target="blank">RequireJS</a> is a JavaScript file and module loader
+                </li>
+                <li>
+                     <a href="http://www.greensock.com/" target="blank">GSAP</a> is a suite of tools for scripted, high-performance HTML5 animations that work in all major browsers
+                </li>
+                <li>
+                     <a href="http://sizzlejs.com/" target="blank">Sizzle</a> A pure-JavaScript CSS selector engine designed to be easily dropped in to a host library
+                </li>
+                <li>
+                     <a href="http://eightmedia.github.io/hammer.js/" target="blank">Hammer</a> A javascript library for multi-touch gestures
+                </li>
+                <li>
+                     <a href="http://www.videojs.com/" target="blank">Video.js</a> The open source HTML5 video player
+                </li>
+                <li>
+                     <a href="http://demos.usejquery.com/ketchup-plugin/" target="blank">jQuery Ketchup Plugin</a> Tasty Form Validation
+                </li>
+                <li>
+                     <a href="http://jscrollpane.kelvinluck.com/" target="blank">jScrollPane</a> cross browser styleable scrollbars with jQuery and CSS
+                </li>
             </ul>
         </div>
         
