--- a/fall-2012/map-bg/index.html
+++ b/fall-2012/map-bg/index.html
@@ -1,87 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <style type="text/css">
+      html { height: 100% }
+      body { height: 100%; margin: 0; padding: 0 }
+      #map-canvas { height: 100% }
+      #sections{
+        position:fixed;
+        bottom:0;
+        left:0;
+        background:rgba(0,0,0,0.75);
+        color:#eee;
+        font-family:arial;
+        padding:18px 12px 18px 12px;
+        width:100%;
+        text-align:center;r
+      }
+      #sections a{
+        font-weight:bold;
+        color:crimson;
+        text-decoration:none;
+      }
+      #sections a:hover{
+        font-weight:bold;
+        color:gold;
+      }
+    </style>
+    <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4lFfLe6M8ZfLtBZuxO82402e1ATUu5iM&sensor=true">
+    </script>
+    <script type="text/javascript">
+      function initialize() {
+        var mapOptions = {
+          //center: new google.maps.LatLng(33.998752, -118.472362), // Wemolab 
+          center: new google.maps.LatLng(34.023991, -118.287474), // USC MAP
+          zoom: 18,
+          //https://developers.google.com/maps/documentation/javascript/maptypes
+          mapTypeId: google.maps.MapTypeId.SATELLITE //options MapTypeId.TERRAIN MapTypeId.HYBRID MapTypeId.ROADMAP
+          //mapTypeId: google.maps.MapTypeId.TERRAIN
+          //mapTypeId: google.maps.MapTypeId.ROADMAP
+        };
+        var map = new google.maps.Map(document.getElementById("map-canvas"),
+            mapOptions);
+      }
+      google.maps.event.addDomListener(window, 'load', initialize);
+    </script>
+  </head>
+  <body>
 
-	<style>
-	body{
-		color: #fff;
-		font-family: Verdana, Geneva, sans-serif;
-		margin:0;
-	}
-	html, body {
-		height:100%;
-	}
-	h1{
-		font-size:190px;
-		padding:0;
-		margin:0;
-	}
-	h2{
-		padding:0;
-		margin:0;
-		font-size:90px;
-	}
-	a{
-		text-decoration:none;
-		color:#fff;
-	}
-	a:hover{
-		color:deeppink;
-	}
-	#cabeza{
-		text-align: center;
-		/*
-		text-shadow: 0 00 0.5em rgba(255,255,255,0.8);
-		background:rgba(0,0,0,0.2);
-		box-shadow: 0 00 0.5em rgba(0,0,0,0.2);
-		*/
-	}
-	#map {
-		position:absolute;
-		width:100%;
-		min-height:100%;
-		background:#dffee7;
-	}
-	#wrapper{
-		min-height:100%;
-		height:auto !important;
-		z-index:1000;
-		background:rgba(0,0,0,0.3);
+    <div id="map-canvas"></div>
+    <div id="sections">
+        Google Maps API Sketches:
+      <a href="api-test-1.html">google maps api test</a> - 
+      <a href="address-to-coordinates.html">address to coordinates</a> - 
+      <a href="flyover-teleporter.html"> flyover teleporter</a> - 
+      <!--<a href="coordinate-finder.html">coordinate calculator</a> - -->
+      <a href="zooming.html">zooming in</a>
+    </div>
+    
 
-		position:relative;
-		margin:auto;
-		padding:80px 0;
-		width:100%;
-
-	}
-	</style>
-
-	<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyB4lFfLe6M8ZfLtBZuxO82402e1ATUu5iM" type="text/javascript"></script>
-
-	<!--<script src="js/jquery-1.8.2.min.js" type="text/javascript" charset="utf-8"></script>-->
-	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-
-	<script src="js/mapita.js" type="text/javascript"></script>
-
-	<script src="js/jquery.lazyload.mini.js" type="text/javascript"></script>
-
-
-
-</head>
-
-<body onload="load()" onunload="GUnload()">
-	<div id="map"></div>
-	
-	<div id="wrapper">
-		<div id="cabeza">
-			<h1 id="map-location">Hello</h1>
-			<h2><a href="#" onClick="window.location.reload()">Take me elsewhere</a></h2>
-			<!--
-			<img src="images/ojo.jpg" width="300px" height="300px" />
-			-->
-		</div>	
-	</div>
-
-</body>
+  </body>
 </html>
