--- a/fall-2012/map-bg/address-to-coordinates.html
+++ b/fall-2012/map-bg/address-to-coordinates.html
@@ -84,7 +84,7 @@
     }
 
     function showAddress(address) {
-      alert("ass");
+      alert("agh");
  
       document.getElementById("lat").innerHTML = "34.0233381";
       document.getElementById("lng").innerHTML = "-118.28719849999999";
