--- a/fall-2012/map-bg/address-to-coordinates.html
+++ b/fall-2012/map-bg/address-to-coordinates.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+WORK IN PROGRESS. DOESNT MAKE MUCH SENSE YET.
+-->
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
