youtube-bg minor edits

--- a/youtube-bg/index.html
+++ b/youtube-bg/index.html
@@ -51,6 +51,7 @@
 
 <body>
 	<div id="video-bg" class="clearfix"></div>
+	<div id="picture-bg" class="clearfix"></div>
 
 	<section id='video-overlay'>
 		<div id="intro-blurb" class="show">
