fixed broken mobile image load

--- a/youtube-bg/index.html
+++ b/youtube-bg/index.html
@@ -59,9 +59,9 @@
 </head>
 
 <body>
-	<div id="video-bg" class="clearfix"></div>
+	<div id="video-bg"></div>
 
-	<div id="picture-bg" class="clearfix hide"></div>
+	<div id="picture-bg" class="hide"></div>
 
 
 	<section id='video-overlay'>
