assignments 5 and 6 are ready

--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
                     <li><a href="assignment-1.html" onclick="//alert('coming soon')">History of the Web</a></li>
                     <li><a href="assignment-2.html" onclick="//alert('coming soon')">Intro to HTML and CSS</a></li>
                     <li><a href="assignment-3.html" >CSS Layout Properties</a></li>
-                    <li><a href="assignment-4.html" >Multiple Page Navigation</a></li><!--
-                    <li><a href="assignment-5.html" >Intro to Javascript</a></li>
-                    <li><a href="assignment-6.html" >Javascript and JQuery</a></li>
+                    <li><a href="assignment-4.html" >Multiple Page Navigation</a></li>
+                    <li><a href="assignment-5.html" >Intro to Javascript and jQuery</a></li>
+                    <li><a href="assignment-6.html" >jQuery plugins</a></li><!--
                     <li><a href="assignment-7.html" >Chrome Developer Tools</a></li>
                     <li><a href="assignment-8.html" >Content and Formats</a></li>
                     <li><a href="assignment-9.html" >Final Project Proposal</a></li>
