--- a/assignment-5.html
+++ b/assignment-5.html
@@ -70,6 +70,7 @@
             <p>
                 <h2>Sample Code (more to come)</h2>
                 <ul>
+                    <li><a href="spring-2013/arrays.html" target="blank">Array Shuffle</a> - Basic JS Animation example (Covers arrays, functions and timers)</li>
                     <li><a href="fall-2012/JQueryUI-sortablegrid.html" target="blank">A sortable grid</a> - based on <a href="http://jqueryui.com/demos/sortable/#display-grid">this demo</a></li>
                     <li><a href="fall-2012/JQueryUI-accordion.html" target="blank">An accordion template</a> - based on <a href="http://api.jquery.com/slideToggle/">this demo</a></li>
                     <li><a href="fall-2012/JQueryUI-slideshow.html" target="blank">A fading slideshow template</a> - based on <a href="http://jqueryui.com/demos/effect/">this demo</a></li>
