assignment 8 and some corrections on youtube video bg and and pop up examples

--- a/pop-ups/index.html
+++ b/pop-ups/index.html
@@ -6,11 +6,14 @@
 <style>
 body{
 	margin:0;
-	background:url('http://farm3.staticflickr.com/2845/8822118518_bced4c5510_o.jpg');
+	background:url('http://farm8.staticflickr.com/7346/12739626885_cb1f3b8501_b.jpg');
 	background-size:cover;
 	background-position: center center;
 	font-family:monospace;
 	font-size:1.2em;
+}
+::-webkit-scrollbar{
+	display:none;
 }
 a{
 	font-weight:bold;
