--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
                     <li><a href="assignment-4.html" >Multiple Page Navigation</a></li>
                     <li><a href="assignment-5.html" >Intro to Javascript and jQuery</a></li>
                     <li><a href="assignment-6.html" >jQuery plugins</a></li>
-                    <li><a href="assignment-7.html" >Chrome Developer Tools</a></li><!--
-                    <li><a href="assignment-8.html" >Content and Formats</a></li>
+                    <li><a href="assignment-7.html" >Chrome Developer Tools</a></li>
+                    <li><a href="assignment-8.html" >Content and Formats</a></li><!--
                     <li><a href="assignment-9.html" >Final Project Proposal</a></li>
                     <li><a href="assignment-10.html" >Final Project Pre-Production</a></li>
                     <li><a href="assignment-11.html" >Final Project Landing Page</a></li>
